kustomize/base/kweet-processing-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kweet-processing-service-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: kweet-processing-service
    spec:
      containers:
        - name: kweet-processing-service
          image: kweet-processing-service
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
      restartPolicy: Always
  selector:
    matchLabels:
      app: kweet-processing-service
