kustomize/base/kweet-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kweet-service-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: kweet-service
    spec:
      containers:
        - name: kweet-service
          image: kweet-service
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 500m
            requests:
              cpu: 300m
      restartPolicy: Always
  selector:
    matchLabels:
      app: kweet-service
