kustomize/base/social-graph-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: social-graph-service-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: social-graph-service
    spec:
      containers:
        - name: social-graph-service
          image: social-graph-service
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
      restartPolicy: Always
  selector:
    matchLabels:
      app: social-graph-service
