kustomize/base/kweet-processing-service-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kweet-processing-service-svc
  labels:
    app: kweet-processing-service
  annotations:
    konghq.com/plugins: prometheus-example
spec:
  selector:
    app: kweet-processing-service
  ports:
    - port: 8080
      targetPort: 8086
      protocol: TCP
      name: http
