kustomize/base/kweet-service-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kweet-service-svc
  labels:
    app: kweet-service
  annotations:
    konghq.com/plugins: prometheus-example
spec:
  selector:
    app: kweet-service
  ports:
    - port: 8080
      targetPort: 8081
      protocol: TCP
      name: http
