kustomize/base/social-graph-service-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: social-graph-service-svc
spec:
  selector:
    app: social-graph-service
  ports:
    - port: 8080
      targetPort: 8082
      protocol: TCP
