kustomize/base/timeline-service-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: timeline-service-svc
spec:
  selector:
    app: timeline-service
  ports:
    - port: 8080
      targetPort: 8085
      protocol: TCP
