kustomize/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-kong
  namespace: kwetter
  annotations:
    konghq.com/plugins: app-jwt,prometheus,rate-limiting,cors
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: kong
  tls:
    - secretName: kwetter-prod-tls
      hosts:
        - oereren.com
  rules:
    - http:
        paths:
          - path: /api/v1/kweets/*
            pathType: Prefix
            backend:
              service:
                name: kweet-service-svc
                port:
                  number: 8080
          - path: /api/v1/auth/*
            pathType: Prefix
            backend:
              service:
                name: kweet-service-svc
                port:
                  number: 8080
          - path: /api/v1/users/*
            pathType: Prefix
            backend:
              service:
                name: user-service-svc
                port:
                    number: 8080
          - path: /api/v1/social-graph/*
            pathType: Prefix
            backend:
              service:
                name: social-graph-service-svc
                port:
                    number: 8080
          - path: /api/v1/timelines/*
            pathType: Prefix
            backend:
              service:
                name: timeline-service-svc
                port:
                    number: 8080
